# ChangeLog for x11-libs/libX11
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/libX11/ChangeLog,v 1.159 2010/12/31 19:56:54 jer Exp $

  31 Dec 2010; Jeroen Roovers <jer@gentoo.org> libX11-1.4.0.ebuild:
  Stable for HPPA (bug #344827).

  29 Dec 2010; Markus Meier <maekke@gentoo.org> libX11-1.4.0.ebuild:
  arm stable, bug #344827

  25 Dec 2010; Christian Faulhammer <fauli@gentoo.org> libX11-1.4.0.ebuild:
  x86 stable, bug 344827

  23 Dec 2010; Samuli Suominen <ssuominen@gentoo.org> libX11-1.4.0.ebuild:
  amd64 stable wrt #344827

  19 Dec 2010; Samuli Suominen <ssuominen@gentoo.org> libX11-1.4.0.ebuild:
  ppc64 stable wrt #344827

*libX11-1.4.0 (22 Nov 2010)

  22 Nov 2010; Tomáš Chvátal <scarabeus@gentoo.org> +libX11-1.4.0.ebuild:
  Version bump

  21 Oct 2010; Tomáš Chvátal <scarabeus@gentoo.org> -libX11-1.3.3.ebuild:
  old

  21 Oct 2010; Brent Baude <ranger@gentoo.org> ChangeLog:
  Marking libX11-1.3.4 ppc stable for bug 239063

  28 Sep 2010; Samuli Suominen <ssuominen@gentoo.org> libX11-1.3.4.ebuild:
  ppc64 stable wrt #327777

*libX11-1.3.6 (21 Sep 2010)

  21 Sep 2010; Tomáš Chvátal <scarabeus@gentoo.org> -libX11-1.3.5.ebuild,
  +libX11-1.3.6.ebuild:
  Version bump. Drop older.

  19 Sep 2010; Raúl Porcel <armin76@gentoo.org> libX11-1.3.4.ebuild:
  ia64/s390/sh/sparc stable wrt #327777

  12 Sep 2010; Tobias Klausmann <klausman@gentoo.org> libX11-1.3.4.ebuild:
  Stable on alpha, bug #327777

  10 Sep 2010; Tomáš Chvátal <scarabeus@gentoo.org> -libX11-1.2.2.ebuild:
  remove old

*libX11-1.3.5 (12 Aug 2010)

  12 Aug 2010; Tomáš Chvátal <scarabeus@gentoo.org> +libX11-1.3.5.ebuild:
  Version bump.

  02 Aug 2010; Raúl Porcel <armin76@gentoo.org> libX11-1.3.3.ebuild:
  alpha/ia64/s390/sh/sparc stable wrt #308521

  22 Jul 2010; Markus Meier <maekke@gentoo.org> libX11-1.3.4.ebuild:
  arm stable, bug #327777

  14 Jul 2010; Jeroen Roovers <jer@gentoo.org> libX11-1.3.4.ebuild: