@@ -1,0 +1,27 @@
+# Copyright 1999-2011 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/libXaw/libXaw-1.0.9.ebuild,v 1.1 2011/01/15 17:44:09 scarabeus Exp $
+
+EAPI=3
+inherit xorg-2
+
+DESCRIPTION="X.Org Xaw library"
+
+KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~ppc-aix ~x86-fbsd ~x64-freebsd ~x86-interix ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~sparc-solaris ~sparc64-solaris ~x64-solaris ~x86-solaris"
+IUSE="doc"
+
+RDEPEND="x11-libs/libX11
+	x11-libs/libXext
+	x11-libs/libXt
+	x11-libs/libXmu
+	x11-libs/libXpm
+	x11-proto/xproto
+	x11-proto/xextproto"
+DEPEND="${RDEPEND}
+	doc? ( app-text/xmlto )"
+
+pkg_setup() {
+	CONFIGURE_OPTIONS="$(use_enable doc specs)
+		$(use_with doc xmlto)
+		--without-fop"
+}
