@@ -1,0 +1,18 @@
+# Copyright 1999-2011 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/libXp/libXp-1.0.1.ebuild,v 1.1 2011/01/15 17:37:38 scarabeus Exp $
+
+EAPI=3
+
+inherit xorg-2
+
+DESCRIPTION="X.Org Xp library"
+KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~ppc-aix ~x86-fbsd ~x64-freebsd ~ia64-hpux ~x86-interix ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~sparc-solaris ~sparc64-solaris ~x64-solaris ~x86-solaris ~x86-winnt"
+IUSE=""
+
+RDEPEND="x11-libs/libX11
+	x11-libs/libXext
+	x11-libs/libXau
+	x11-proto/xextproto
+	x11-proto/printproto"
+DEPEND="${RDEPEND}"
