@@ -1,6 +1,11 @@
 # ChangeLog for x11-libs/libXaw
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/libXaw/ChangeLog,v 1.84 2010/12/31 20:00:50 jer Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/libXaw/ChangeLog,v 1.85 2011/01/15 17:44:08 scarabeus Exp $
+
+*libXaw-1.0.9 (15 Jan 2011)
+
+  15 Jan 2011; Tomáš Chvátal <scarabeus@gentoo.org> +libXaw-1.0.9.ebuild:
+  Version bump
 
   31 Dec 2010; Jeroen Roovers <jer@gentoo.org> libXaw-1.0.8.ebuild:
   Stable for HPPA (bug #344827).
