@@ -1,6 +1,11 @@
 # ChangeLog for x11-libs/libX11
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/libX11/ChangeLog,v 1.159 2010/12/31 19:56:54 jer Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/libX11/ChangeLog,v 1.160 2011/01/15 17:41:55 scarabeus Exp $
+
+*libX11-1.4.1 (15 Jan 2011)
+
+  15 Jan 2011; Tomáš Chvátal <scarabeus@gentoo.org> +libX11-1.4.1.ebuild:
+  Version bump
 
   31 Dec 2010; Jeroen Roovers <jer@gentoo.org> libX11-1.4.0.ebuild:
   Stable for HPPA (bug #344827).
